# agent-skill-plugin

./: BMAD-SDLC-Agents-Executive-Briefing.pptx  CLAUDE.md  COMMERCIAL-LICENSE.md  GEMINI.md  LICENSE  NEW_FILES_SUMMARY.txt  README.md
atlassian-mcp/: .env.example  README.md  package-lock.json  package.json
bmad-sdlc-agents/: BMAD-SHARED-CONTEXT.md  CLAUDE.md  COMMERCIAL-LICENSE.md  FILES_CREATED.md  README.md  gemini-extension.json  ux-designer.skill
docs/: adoption.md  architecture.md  tooling.md  workflows.md
drawio-skill-output/: .$flowchart-without-skill.drawio.bkp  architecture-with-skill.drawio  architecture-without-skill.drawio  drawio-eval-review.html  drawio.skill  flowchart-with-skill.drawio  flowchart-without-skill.drawio  orgchart-with-skill.drawio  orgchart-without-skill.drawio
drawio-skill-output/drawio-toolkit/mcp-server/: ARCHITECTURE.md  DELIVERY_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  QUICK_START.md  README.md  example_architecture.drawio  example_gallery.drawio  example_mermaid.drawio  example_plantuml.drawio  example_usage.py  pyproject.toml  test_diagram_core.py  test_server.py
drawio-skill-output/drawio-toolkit/mcp-server/drawio_mcp_server/: __init__.py  diagram_core.py  server.py  style_maps.py
drawio-skill-output/drawio-toolkit/mcp-server/drawio_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
eval/: bmad-agent-eval-dashboard.html
hooks/: install-project-hooks.sh
rules/: README.md
scripts/: bmad-eval-run.sh  check-playwright-env.sh  clean-duplicate-hooks.py  install-global.ps1  (+2 more)
(+423 files in other folders)
