[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drawio-mcp-server"
version = "1.0.0"
description = "MCP server for draw.io diagram operations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MCP Server Contributors", email = "support@example.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
drawio-mcp-server = "drawio_mcp_server.server:main"

[tool.setuptools]
packages = ["drawio_mcp_server"]
